--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:tailwind": "tailwind build public/assets/css/index.css -o public/assets/css/tailwind.css",
     "dev": "nodemon app.js",
+    "style": "npx tailwindcss -i ./public/assets/css/satoshi.css -o ./public/assets/css/style.css --watch",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
@@ -14,23 +14,23 @@
   "license": "ISC",
   "dependencies": {
     "@alpinejs/persist": "^3.12.0",
-    "alpinejs": "^3.10.3",
-    "apexcharts": "^3.36.3",
-    "flatpickr": "^4.6.13",
-    "jsvectormap": "^1.5.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@tailwindcss/forms": "^0.5.7",
+    "alpinejs": "^3.10.3",
+    "apexcharts": "^3.36.3",
     "brcypt": "^1.0.1",
     "cli": "^1.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "flatpickr": "^4.6.13",
     "highlight.js": "^11.4.0",
     "jsonwebtoken": "^9.0.2",
+    "jsvectormap": "^1.5.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
@@ -41,16 +41,16 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "style-loader": "^3.3.1",
-    "postcss-loader": "^6.2.1",
-    "html-loader": "^3.1.0",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
     "glob": "^7.2.0",
-    "babel-loader": "^8.2.3",
-    "autoprefixer": "^10.4.2",
+    "html-loader": "^3.1.0",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.4.1"
   }
 }
