--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apexcharts": "^3.36.3",
     "bcrypt": "^5.1.1",
     "cli": "^1.0.1",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -36,6 +37,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
