--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_NAME='grafika'
 DB_USER='grafika'
 DB_PASS='grafika123'
 DB_PORT='127.0.0.1'
-DB_DIALECT='postgres'
+DB_DIALECT='mysql'
 APP_VERSION='v1'
 
 # image url
